--- a/examples/cube-rush/package.json
+++ b/examples/cube-rush/package.json
@@ -26,7 +26,7 @@
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "typescript": "^5.0.2",
-    "typescript-eslint": "^8.0.0-alpha.54",
+    "typescript-eslint": "^8.12.2",
     "vite": "^5.2.11",
     "vite-plugin-qrcode": "^0.2.2"
   }
