--- a/examples/neon-snake/package.json
+++ b/examples/neon-snake/package.json
@@ -21,7 +21,6 @@
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -29,11 +28,11 @@
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "beta",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "typescript": "^5.0.2",
-    "typescript-eslint": "^8.0.0-alpha.54",
+    "typescript-eslint": "^8.12.2",
     "vite": "^5.2.11",
     "vite-plugin-qrcode": "^0.2.2"
   }
