--- a/examples/oink-oink/package.json
+++ b/examples/oink-oink/package.json
@@ -13,7 +13,6 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -27,13 +26,13 @@
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "beta",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "react-scripts": "5.0.1",
     "rollup": "^3.20.4",
     "typescript": "^4.4.2",
-    "typescript-eslint": "^8.0.0-alpha.54"
+    "typescript-eslint": "^8.12.2"
   },
   "scripts": {
     "dev": "npm run dev:client & npm run dev:logic",
@@ -42,15 +41,6 @@
     "build": "npm run lint && DISABLE_ESLINT_PLUGIN=true GENERATE_SOURCEMAP=false react-scripts build && rollup -c",
     "deploy": "../../scripts/copy-assets.sh oink-oink && yarn build && rune upload build",
     "lint": "eslint src"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "rules": {
-      "jsx-a11y/alt-text": "off"
-    }
   },
   "browserslist": {
     "production": [
