--- a/examples/pinpoint/package.json
+++ b/examples/pinpoint/package.json
@@ -18,7 +18,6 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
     "@types/howler": "^2.2.7",
     "@types/node": "^16.7.13",
@@ -29,14 +28,14 @@
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "beta",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
     "ts-node": "10.9.1",
     "typescript": "^4.4.2",
-    "typescript-eslint": "^8.0.0-alpha.54"
+    "typescript-eslint": "8.12.2"
   },
   "scripts": {
     "generatePanoramasLogic": "ts-node --transpile-only scripts/generatePanoramasLogic.ts",
@@ -48,15 +47,6 @@
     "dev:logic": "esbuild src/logic.ts --bundle --outfile=public/logic.js --platform=neutral --tsconfig=tsconfig-logic.json --minify --watch",
     "deploy": "../../scripts/copy-assets.sh pinpoint && yarn build && rune upload build",
     "lint": "eslint src"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "rules": {
-      "jsx-a11y/alt-text": "off"
-    }
   },
   "browserslist": {
     "production": [
