--- a/examples/sudoku/package.json
+++ b/examples/sudoku/package.json
@@ -15,7 +15,6 @@
     "sudoku-gen": "^1.0.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -29,13 +28,13 @@
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "beta",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "prettier": "^3.3.3",
     "globals": "^15.8.0",
     "react-scripts": "5.0.1",
     "rollup": "^3.20.4",
     "typescript": "^4.4.2",
-    "typescript-eslint": "^8.0.0-alpha.54"
+    "typescript-eslint": "^8.12.2"
   },
   "scripts": {
     "build": "npm run lint && DISABLE_ESLINT_PLUGIN=true GENERATE_SOURCEMAP=false react-scripts build && rollup -c",
@@ -44,12 +43,6 @@
     "dev:logic": "rollup -c --watch",
     "deploy": "../../scripts/copy-assets.sh sudoku && yarn build && rune upload build",
     "lint": "eslint src"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
