--- a/packages/rune-games-cli/templates/javascript-react/package.json
+++ b/packages/rune-games-cli/templates/javascript-react/package.json
@@ -15,14 +15,13 @@
     "rune-sdk": "^4.24.5"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "beta",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "vite": "^5.2.11",
