--- a/packages/rune-games-cli/templates/typescript-pixi-react/package.json
+++ b/packages/rune-games-cli/templates/typescript-pixi-react/package.json
@@ -18,7 +18,6 @@
     "rune-sdk": "^4.24.5"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -27,11 +26,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "beta",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^8.0.0-alpha.54",
+    "typescript-eslint": "^8.11.0",
     "vite": "^5.2.11",
     "vite-plugin-qrcode": "^0.2.2"
   }
