--- a/tech-demos/threejs/package.json
+++ b/tech-demos/threejs/package.json
@@ -17,8 +17,8 @@
     "three": "^0.170.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.7.0",
-    "eslint": "^9.7.0",
+    "@eslint/js": "9.13.0",
+    "eslint": "9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.8.0",
